--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
    <head>
       <title>Intro to JavaScript</title>
-      <script> alert('Hello'); alert ('World') </script>
+      <script> alert('Hello') ;
+         alert ('World') </script>
    </head>
    <body>
    </body>
