--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
    <head>
       <title>Intro to JavaScript</title>
-      <script> alert('Hello'/nWorld') </script>
+      <script> alert(3+
+      1
+      +2);
+      </script>
    </head>
    <body>
    </body>
