--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
    <head>
       <title>Intro to JavaScript</title>
-      <script> alert(3+
+      <script> alert(3+ 'Hello'
       1
-      +2);
+     'World' +2);
       </script>
    </head>
    <body>
