--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <html>
    <head>
       <title>Intro to JavaScript</title>
-      <script> alert(3+ 'Hello'
-      1
-     'World' +2);
+      <script> alert('Hello World!'); </script>
       </script>
    </head>
    <body>
