--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
    <head>
       <title>Intro to JavaScript</title>
-      <script> alert('Hello World!'); </script>
-      </script>
+      <script> alert("Hello World!"); </script>
    </head>
    <body>
    </body>
