--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
    <head>
       <title>Intro to JavaScript</title>
-      <script> alert("Hello")<br/>;("World!"); </script>
+      <script> alert("Hello")<br/>; <br/>("World!"); </script>
    </head>
    <body>
    </body>
