--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
    <head>
-      <title>Intro to JavaScript</title>
-      <script> alert("Hello World!"); </script>
-   </head>
-   <body>
-   </body>
-</html>
+      <script>alert (‘Hello, world! Within head tag’);< /script>
+    </head>
+      <body>
+      <script>alert (‘Hello, world! Within body tag’);< /script>
+      </body>
+      <script>alert (‘Hello, world! Within HTML tag’);< /script>
+    </html>
