--- a/StockVariables/StockVariables.html
+++ b/StockVariables/StockVariables.html
@@ -1,7 +1,20 @@
-<DOCTYPE html>
-  <html>
+<!DOCTYPE html>
+  <html lang = "en">
+    <head>
+      <meta charset="UTF-8"
+            <title>Stocks Varibles</title>
+    <link rel="stylesheet" href="myStyles.css"
+    </head>
     <body>
-      <script>Walmart</script>
+      <script>
+      let myVariable = Amazon: 3,463.08;
+      let myVariable = Microsoft: 294.72;
+      let myVariable = Samsung: 76,300;
+      let myVariable = Apple: 150.08;
+      let myVariable = Google: 2,839.63;
+      </script>
+      <script>
+        document.write("My Variable is " + myVariable);
+      </script>
     </body>
-  </html>
-  
+</html>
